fix: index alignment

--- a/src/app/styles.module.scss
+++ b/src/app/styles.module.scss
@@ -271,6 +271,10 @@
         justify-content: center;
         font-weight: 600;
       }
+
+      & > span:nth-child(3) {
+        justify-content: flex-end;
+      }
     }
   }
 }
